apps/production/netbootxyz/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbootxyz-route
  namespace: netbootxyz
spec:
  hostnames:
    - netbootxyz.fanen.dk
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbootxyz-assets-route
  namespace: netbootxyz
spec:
  hostnames:
    - netboot.fanen.dk
